Switch to Java 8.